// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectFile > should render with json file format 1`] = `
<div>
  <div
    class="relative mt-4 h-52 rounded-xl border-2 border-dashed border-theme-secondary-300 p-1.5 dark:border-theme-secondary-800"
    data-testid="SelectFile"
  >
    <div
      class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-black"
      data-testid="SelectFile__drop-zone"
    >
      <div
        data-testid="icon-ExtensionJsonLight"
      >
        <div
          style="height: 40px; width: 40px;"
        />
      </div>
      <div
        class="mt-4"
      >
        <span
          class="mr-px hidden text-lg font-semibold leading-[21px] sm:inline"
        >
          Drag & Drop or
           
        </span>
        <button
          class="link ring-focus relative cursor-pointer text-lg font-semibold leading-[21px] focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          Browse Files
        </button>
      </div>
      <div
        class="mt-2 text-sm font-semibold text-theme-secondary-500"
      >
        Supported format is .json
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile > should render with wwe file format 1`] = `
<div>
  <div
    class="relative mt-4 h-52 rounded-xl border-2 border-dashed border-theme-secondary-300 p-1.5 dark:border-theme-secondary-800"
    data-testid="SelectFile"
  >
    <div
      class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-black"
      data-testid="SelectFile__drop-zone"
    >
      <div
        data-testid="icon-ExtensionWweLight"
      >
        <div
          style="height: 40px; width: 40px;"
        >
          <svg
            fill="none"
            style="height: 100%; width: 100%;"
            viewBox="0 0 40 40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="WWE"
            >
              <g
                id="Group"
              >
                <path
                  d="M7.58667 38.1133H6.53333C5.14 38.1133 4 36.9733 4 35.58V3.53333C4 2.14 5.14 1 6.40667 1H24.0133C24.7733 1 25.28 1.25333 25.7867 1.76L35.4133 11.3867C35.92 11.8933 36.1733 12.5267 36.1733 13.16V22.76"
                  id="Vector"
                  stroke="#235B95"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M30.0011 28V31.7513C30.0011 34.3236 29.2508 36.6815 27.8575 38.8251C26.4642 36.6815 25.7139 34.3236 25.7139 31.7513C25.7139 34.3236 24.9637 36.6815 23.5703 38.8251C22.177 36.6815 21.4268 34.3236 21.4268 31.7513V28"
                  id="Vector_2"
                  stroke="#212225"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M18.1554 28V31.7513C18.1554 34.3236 17.4051 36.6815 16.0118 38.8251C14.6185 36.6815 13.8682 34.3236 13.8682 31.7513C13.8682 34.3236 13.118 36.6815 11.7246 38.8251C10.3313 36.6815 9.58105 34.3236 9.58105 31.7513V28"
                  id="Vector_3"
                  stroke="#212225"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <g
                  id="Group 2254"
                >
                  <path
                    d="M37.4172 38.9996H35.1256C33.86 38.9996 32.834 38.0147 32.834 36.7997V30.1999C32.834 28.9849 33.86 28 35.1256 28H37.4172"
                    id="Shape"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M32.834 34.4164H37.4172"
                    id="Shape_2"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="mt-4"
      >
        <span
          class="mr-px hidden text-lg font-semibold leading-[21px] sm:inline"
        >
          Drag & Drop or
           
        </span>
        <button
          class="link ring-focus relative cursor-pointer text-lg font-semibold leading-[21px] focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          Browse Files
        </button>
      </div>
      <div
        class="mt-2 text-sm font-semibold text-theme-secondary-500"
      >
        Supported format is .wwe
      </div>
    </div>
  </div>
</div>
`;
